--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,21 +497,43 @@ body {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
 /** header end **/
 
 
 
+/** hero start **/
+
+.hero {
+    padding-block-start: 0;
+}
+
+.hero-card {
+    background-color: var(--light-gray);
+    padding: 100px 15px;
+    background-position: 40%;
+}
+
+.hero-text {
+    font-size: var(--fs-6);
+    margin-block: 16px 30px;
+}
+
+.hero .price {
+    color: var(--black);
+    font-size: var(--fs-5);
+    font-weight: var(--fw-600);
+    margin-block-end: 20px;
+}
+
+.hero .scrollbar-item {
+    min-width: 100%;
+}
+
+
+
+
+
+/** hero end **/
 
 
 
