05. js-portfolio-53-glowing. Collection section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -529,12 +529,40 @@ body {
     min-width: 100%;
 }
 
-
-
-
-
 /** hero end **/
 
+
+/** collection start **/
+.collection {
+    padding-block-end: 0;
+}
+
+.collection-list {
+    display: grid;
+    gap: 15px;
+}
+
+.collection-card {
+    background-color: var(--light-gray);
+    min-height: 400px;
+    padding: 40px;
+    padding-block-end: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.collection-card .card-title {
+    margin-block-end: 13px;
+}
+
+.collection-card .card-text {
+    color: var(--black);
+    font-size: var(--fs-6);
+    font-weight: var(--fw-600);
+    margin-block-end: auto;
+}
+
+/** collection end **/
 
 
 
