10. js-portfolio-53-glowing. Blog section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -793,12 +793,53 @@ body {
     align-items: center;
 }
 
-
-
 /** offer end **/
 
 
 
+/** blog start **/
+.blog {
+    padding-block-end: calc(var(--section-padding) * 2);
+}
+
+.blog .section-title {
+    text-align: center;
+    margin-block-end: 40px;
+}
+
+.blog-card .card-banner img {
+    transition: var(--transition-2);
+}
+
+.blog-card:is(:hover, :focus-within) .card-banner img {
+    transform: scale(1.2);
+}
+
+.blog-card .card-title {
+    text-align: center;
+    margin-block: 30px 20px;
+    transition: var(--transition-1);
+}
+
+.blog-card .card-title:is(:hover, :focus-within) {
+    color: var(--hoockers-green);
+}
+
+.blog-card .btn-link {
+    justify-content: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+/** blog end **/
 
 
 
