--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -829,17 +829,161 @@ body {
     justify-content: center;
 }
 
-
-
-
-
-
-
-
-
-
-
 /** blog end **/
+
+
+
+/** footer start **/
+.footer .logo {
+    display: none;
+}
+
+.footer {
+    background-color: var(--cultured-1);
+    padding-block: 70px;
+}
+
+.footer-top {
+    display: grid;
+    gap: 40px;
+    margin-block-end: 60px;
+}
+
+.footer-list-title {
+    color: var(--black);
+    font-size: var(--fs-5);
+    font-weight: var(--fw-600);
+    margin-block-end: 10px;
+}
+
+.footer-list-text {
+    font-size: var(--fs-8);
+}
+
+.footer-list-text .link {
+    display: inline-block;
+    color: var(--black);
+    font-weight: var(--fw-600);
+    text-decoration: underline;
+    transition: var(--transition-1);
+}
+
+.footer-list-text .link:is(:hover, :focus) {
+    color: var(--hoockers-green);
+}
+
+.footer-list-text.bold {
+    color: var(--black);
+    font-weight: var(--fw-800);
+    margin-block: 15px 2px;
+}
+
+.footer-link {
+    font-size: var(--fs-7);
+    padding-block: 5px;
+}
+
+.footer-link:is(:hover, :focus) {
+    text-decoration: underline;
+}
+
+.newsletter-title {
+    color: var(--black);
+    font-size: var(--fs-3);
+    font-weight: var(--vw-600);
+    line-height: 1.3;
+}
+
+.newsletter-text {
+    font-size: var(--fs-7);
+    line-height: 2;
+    margin-block: 10px 35px;
+}
+
+.newsletter-form {
+    position: relative;
+}
+
+.email-field {
+    background-color: var(--white);
+    font-size: var(--fs-7);
+    padding: 12px 18px;
+    padding-inline-end: 145px;
+    border: 1px solid var(--hoockers-green_20);
+    border-radius: var(--radius-3);
+    outline: none;
+    transition: var(--transition-1);
+}
+
+.email-field::placeholder {
+    color: var(--spanish-gray);
+}
+
+.email-field:focus {
+    border-color: var(--black);
+}
+
+.newsletter-form .btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.copyright {
+    font-size: var(--fs-7);
+}
+
+.footer-bottom .wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+    margin-block-end: 20px;
+}
+
+.social-list {
+    display: flex;
+    gap: 20px;
+}
+
+.social-link {
+    color: var(--black);
+    font-size: 18px;
+    transition: var(--transition-1);
+}
+
+.social-link:is(:hover, :focus) {
+    color: var(--hoockers-green);
+}
+
+.footer-bottom > img {
+    max-width: max-content;
+}
+
+
+
+
+/** footer end **/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
