--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -937,9 +937,9 @@ body {
 .footer-bottom .wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    gap: 15px;
+    gap: 40px;
     margin-block-end: 20px;
 }
 
@@ -960,19 +960,39 @@ body {
 
 .footer-bottom > img {
     max-width: max-content;
+    margin: auto;
 }
-
-
 
 
 /** footer end **/
 
 
+.back-top-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    background-color: var(--white);
+    color: var(--hoockers-green);
+    font-size: 22px;
+    padding: 13px;
+    border-radius: 50%;
+    box-shadow: var(--shadow-1);
+    z-index: 4;
+    opacity: 0;
+    visibility: hidden;
+    transition: var(--transition-1);
+}
 
+.back-top-btn:is(:hover, :focus) {
+    background-color: var(--hoockers-green);
+    color: var(--white);
+}
 
-
-
-
+.back-top-btn.active {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(-10px);
+}
 
 
 
